--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,46 +1,46 @@
 :root {
-    --rubik: 'Rubik', sans-serif;
-    --krub: 'Krub', sans-serif;
-    --main-bg-color: #091242;
-    --secondary-bg-color: #ebebeb;
-    --main-accent-color: #ffd550;
-    --btn-gradient: linear-gradient(90deg, rgb(222, 175, 19) 0%, #fddb6a 100%);
-    --light-font-color: #fff;
-    --dark-font-color: #000;
-    --danger-color: #f83434;
-    --success-color: #20c420;
-    --warning-color: #ffc022;
-    --info-color: dodgerblue;
+  --rubik: "Rubik", sans-serif;
+  --krub: "Krub", sans-serif;
+  --main-bg-color: #091242;
+  --secondary-bg-color: #ebebeb;
+  --main-accent-color: #ffd550;
+  --btn-gradient: linear-gradient(90deg, rgb(222, 175, 19) 0%, #fddb6a 100%);
+  --light-font-color: #fff;
+  --dark-font-color: #000;
+  --danger-color: #f83434;
+  --success-color: #20c420;
+  --warning-color: #ffc022;
+  --info-color: dodgerblue;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: var(--krub) !important;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--krub) !important;
 }
 
 body {
 }
 
 button {
-    transition: 0.1s;
+  transition: 0.1s;
 }
 
 button:hover {
-    filter: brightness(110%);
+  filter: brightness(110%);
 }
 
 button:active:not(:disabled) {
-    opacity: 0.8;
-    transform: scale(0.95);
+  opacity: 0.8;
+  transform: scale(0.95);
 }
 
 input:focus {
-    box-shadow: 0px 0px 3px 2px var(--main-accent-color);
+  box-shadow: 0px 0px 3px 2px var(--main-accent-color);
 }
 
 html,
 .pdf_driver {
-    line-height: unset !important;
+  line-height: unset !important;
 }
