--- a/client/src/routes/draft/Draft.scss
+++ b/client/src/routes/draft/Draft.scss
@@ -2,10 +2,10 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  overflow: auto;
-  padding: 50px 30px;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  transform: scale(0.5);
   font-family: sans-serif !important;
 }
 
