--- a/client/src/routes/draft/Draft.scss
+++ b/client/src/routes/draft/Draft.scss
@@ -1,11 +1,9 @@
 .darft_container {
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transform: scale(0.5);
   font-family: sans-serif !important;
 }
 
@@ -40,6 +38,14 @@
 .draft_text.expired {
   opacity: 1;
   backdrop-filter: blur(5px);
+}
+
+div[data-certificate-status="EXPIRED"] {
+  backdrop-filter: blur(5px);
+  width: 100%;
+  background-color: red;
+  z-index: 3;
+  overflow: hidden;
 }
 
 .image__avatar {
