--- a/client/src/routes/search/Search.scss
+++ b/client/src/routes/search/Search.scss
@@ -7,7 +7,18 @@
 .search-certificate__content {
   display: flex;
   align-items: center;
+  justify-content: center;
   max-width: 430px;
   width: 100%;
-  height: auto;
+  height: 200vh;
+}
+
+.search-wrapper {
+  transform: scale(0.25);
+
+  & > div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
